--- a/a_style.css
+++ b/a_style.css
@@ -1,20 +1,21 @@
 .rocket {
     width: 50px;
-    margin-top: 100px;
+    margin-top: 50vw;
+    margin-left: 50vw;
 
 }
 
 .animacion_vuela {
-    animation: parametros_de_vuelo 1s infinite;
+    animation: parametros_de_vuelo 5s infinite;
 
 }
 
 
 @keyframes parametros_de_vuelo {
     25% {
-        transform: translatey(100px)
+        transform: translateY(-50vw)
+        scale(2)
+        rotate(90deg)
     }
-    75% {
-        transform: translateX(150px)
-    }
+   
 }
